<resources>
    <string name="app_name">LocalTrader</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="businessname_placeholder">BusinessName</string>
    <string name="business_description_placeholer">Description Description Description</string>
    <string name="addProductTitleText">Termék hozzáadása</string>
    <string name="addProduct_ProductName">Termék neve</string>
    <string name="addProduct_commentText">Megjegyzés</string>
    <string name="addProduct_uploadImage">Kép feltöltése</string>
    <string name="addProduct_priceText">Ár</string>
    <string name="addProduct_addButton">Hozzáadás</string>
    <string name="acceptOrderButton">Vállalom</string>
    <string name="doneOrderButton">Kész</string>
    <string name="sentOrderButton">Postázva</string>
    <string name="deleteOrderButton">Törlés</string>
    <string name="email_text">Email</string>
    <string name="place_Text">Helység</string>
    <string name="phone_text">Telefon</string>
    <string name="tags_text">Címkék</string>
    <string name="facebook_text">Facebook</string>
    <string name="instagram_text">Instagram</string>
    <string name="statistics_text">Statisztikák</string>
    <string name="createBusinessText">Vállalkozás létrehozása</string>
    <string name="name_text">Név</string>
    <string name="address_text">Cím</string>
    <string name="description_text">Leírás</string>
    <string name="member_text">Tagok:</string>
    <string name="email_placeholder">email cím</string>
    <string name="logo_text">Logo:</string>
    <string name="create_text">Létrehozás</string>
    <string name="order_text">Rendelés</string>
    <string name="noBusinnesTitle">Még nincsenek kedvenc vállalkozásai</string>
    <string name="search_text">Keresés</string>
    <string name="login_text">Bejelentkezés</string>
    <string name="password_text">Jelszó</string>
    <string name="loginButtonText">Belépés</string>
    <string name="noAccountText">Még nincs fiókom</string>
    <string name="noBusinessYet">Még nem hozott létre vállalkozást</string>
    <string name="noOrders">Nincsenek rendelései</string>
    <string name="city_text">Város</string>
    <string name="postal_code">Postakód</string>
    <string name="quantity_text">Darabszám</string>
    <string name="sum_text">Összeg:</string>
    <string name="orderButtonText">Megrendel</string>
    <string name="myBusinessText">Vállalkozásom</string>
    <string name="logout_text">Kijelentkezés</string>
    <string name="first_name_text">First Name</string>
    <string name="registration_text">Regisztráció</string>
    <string name="lastNameText">Vezetéknév</string>
    <string name="firstNameText">Keresztnév</string>
    <string name="content_description">kephozaadas</string>
    <string name="save_text">Mentés</string>
    <string name="alreadyAccount">Már van fiókom</string>
    <string name="product_name_placeholder">Termék neve</string>
    <string name="product_orderer_placeholder">Rendelte:</string>
    <string name="quantity_placeholder">Darabszám:</string>
    <string name="address_placeholder">Cím:</string>
    <string name="phone_placeholder">Telefonszám:</string>
    <string name="time_placeholder">Időpont:</string>
    <string name="business_placeholder">Vállalkozás:</string>
    <string name="productName_placeholder">Termék:</string>
    <string name="orderStatusText">Rendelés állapota</string>
    <string name="orderWorkerText">Rajta dolgozik</string>
</resources>