<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@color/item_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_pending"
                android:drawableTint="#FFFFFF"
                android:text="@string/product_name_placeholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/countProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/quantity_placeholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/personNameTextView"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/product_orderer_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addressTextView"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPostalCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postal_code"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/clientPhone"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/phone_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderStatusText"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/orderWorker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="#FFFFFF"
                android:text="@string/orderWorkerText"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>