<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">


            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/timeTextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/businessTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timeTextView"
                android:text="@string/business_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/businessText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeText"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/businessTextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/businessTextView"
                android:text="@string/sum_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/businessText"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/totalTextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/productTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/totalTextView"
                android:text="@string/productName_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/totalText"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@id/productTextView"
                android:textSize="18sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>