<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".fragments.ProfileFragment"
        android:layout_marginTop="20dp">


        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="60dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/profile"
                tools:ignore="ContentDescription" />


        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/email_placeholder"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/myBusiness"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/myBusinessText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.165" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signOut"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:text="@string/logout_text"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="@id/myBusiness"
        app:layout_constraintStart_toStartOf="@id/myBusiness"
        app:layout_constraintTop_toBottomOf="@id/myBusiness"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/first_name_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>